fixed partners' logos, main menu and welcome div appearence on mobile devices

--- a/css/header.scss
+++ b/css/header.scss
@@ -5,6 +5,7 @@
 @import "neat/neat";
 
 #page_header {
+  width: 100vw;
   position: fixed;
   top: 0;
   right:0;
